long live kaori

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-TOKEN=MTEyMTE4MTE0Njk3ODQ1MTU2Nw.GsaF18.zAsnLLZ418Cm_qgJWqOOF1y9SyW8COY7RXrPPc
+TOKEN=MTEyMTE4MTE0Njk3ODQ1MTU2Nw.G4mLyN.L2D5jY9nCz_VjU8QZMh7dLFBjhxBmzMHF4s35c
 CLIENT_ID=1121181146978451567
